<!--
  ~  NovaWallet, Cryptocurrency Wallet for Android
  ~  Copyright (C) 2018 Alan Evans, NovaCrypto
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~  Original source: https://github.com/NovaCrypto/NovaWallet
  ~  You can contact the authors via github issues.
  -->

<resources>
    <string name="app_name">Mnemonic Entry</string>
    <string name="title_activity_enter_mnemonic">Enter Mnemonic</string>
    <string name="action_settings">Settings</string>

    <string name="backspace">Backspace</string>
    <string name="keypad_2_letters">ABC</string>
    <string name="keypad_3_letters">DEF</string>
    <string name="keypad_4_letters">GHI</string>
    <string name="keypad_5_letters">JKL</string>
    <string name="keypad_6_letters">MNO</string>
    <string name="keypad_7_letters">PQRS</string>
    <string name="keypad_8_letters">TUV</string>
    <string name="keypad_9_letters">WXYZ</string>
</resources>
